@@ -20,11 +20,11 @@
 #define GTK_IS_XTEXT_CLASS(klass)   (G_TYPE_CHECK_CLASS_TYPE ((klass), GTK_TYPE_XTEXT))
 #define GTK_XTEXT_GET_CLASS(obj)    (G_TYPE_INSTANCE_GET_CLASS ((obj), GTK_TYPE_XTEXT, GtkXTextClass))
 
-#define ATTR_HIDDEN		'\001'
 #define ATTR_BOLD			'\002'
 #define ATTR_COLOR		'\003'
 #define ATTR_BLINK		'\006'
 #define ATTR_BEEP			'\007'
+#define ATTR_HIDDEN		'\010'
 #define ATTR_ITALICS2	'\011'
 #define ATTR_RESET		'\017'
 #define ATTR_REVERSE		'\026'
@@ -225,6 +225,7 @@ struct _GtkXText
 	unsigned int separator:1;
 	unsigned int wordwrap:1;
 	unsigned int overdraw:1;
+	unsigned int ignore_hidden:1;	/* rawlog uses this */
 };
 
 struct _GtkXTextClass
