@@ -34,6 +34,8 @@ highlights. The full CVS log is available at www.xchat.org/cvslog/
  - Added a Browse button to the DCC download folder setting.
  - Made the setup window a little neater and Gnome-like.
  - Improved the notify window a little and fixed a small memory leak.
+ - Fixed CTCPs being truncated in the RawLog window.
+ - 
  - 
  - Perl:
   * Turn on utf8 flag for things that should have it on.
